--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,120 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
+.sidebar-nav {
+  list-style: none;
+  margin-top: 3.25rem;
+  font-size: 1.4rem; }
+  .sidebar-nav__item {
+    position: relative; }
+    .sidebar-nav__item:not(:last-child) {
+      margin-bottom: 0.5rem; }
+  .sidebar-nav__item::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--primary);
+    height: 100%;
+    width: 3px;
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
+  .sidebar-nav__item:hover::before, .sidebar-nav__item--active::before {
+    transform: scaleY(1);
+    width: 100%; }
+  .sidebar-nav__item:active::before {
+    background-color: var(--primary-light); }
+  .sidebar-nav__link, .sidebar-nav__link:visited {
+    text-decoration: none;
+    color: var(--grey-light-2);
+    padding: 1.5rem 3rem;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    align-items: center; }
+  .sidebar-nav__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+    fill: currentColor;
+    margin-right: 2rem; }
+
+.legal {
+  text-align: center;
+  padding: 2rem;
+  font-size: 1.2rem;
+  color: var(-grey-light-2); }
+
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    display: block;
+    width: 100%; }
+
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--grey-light-2); }
+  .overview__heading {
+    padding: 2rem 3rem;
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px; }
+  .overview__stars {
+    margin-right: auto;
+    display: flex; }
+  .overview__icon-star, .overview__icon-location {
+    height: 1.75rem;
+    width: 1.75rem;
+    fill: var(--primary); }
+  .overview__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center; }
+  .overview__icon-location {
+    margin-right: 0.5rem; }
+  .overview__rating {
+    background-color: var(--primary);
+    color: #fff;
+    margin-left: 3rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .overview__rating-average {
+    font-size: 2.25rem;
+    font-weight: 400;
+    margin-bottom: -3px; }
+
+.btn-inline {
+  font-size: inherit;
+  border: none;
+  background-color: transparent;
+  color: var(--primary);
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  cursor: pointer; }
+  .btn-inline:hover {
+    color: var(--grey-dark-1); }
+  .btn-inline:focus {
+    outline: none;
+    animation: pulsate 1s infinite; }
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.3);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
+
 .container {
   background-color: var(--grey-light-1);
   max-width: 120rem;
@@ -119,7 +233,7 @@ body {
 .header {
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--grey-light-2);
+  border-bottom: 1px solid var(--grey-light-2);
   font-size: 1.4rem;
   display: flex;
   justify-content: space-between;
@@ -131,8 +245,12 @@ body {
 .sidebar {
   background-color: var(--grey-dark-1);
   color: var(--grey-light-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
-  background-color: orangered;
-  flex: 1; }
+  flex: 1;
+  background-color: #fff;
+  min-height: 80vh; }
