--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -97,3 +97,169 @@
     margin-right: 1rem;
   }
 }
+
+////////////////////////////////////////////
+///// SIDEBAR NAV
+.sidebar-nav {
+  list-style: none;
+  margin-top: 3.25rem;
+  font-size: 1.4rem;
+
+  &__item {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  &__item::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--primary);
+    height: 100%;
+    width: 3px;
+    transform: scaleY(0);
+    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+      background-color 0.1s;
+  }
+  &__item:hover::before,
+  &__item--active::before {
+    transform: scaleY(1);
+    width: 100%;
+  }
+  &__item:active::before {
+    background-color: var(--primary-light);
+  }
+
+  &__link,
+  &__link:visited {
+    text-decoration: none;
+    color: var(--grey-light-2);
+    padding: 1.5rem 3rem;
+    text-transform: uppercase;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+  }
+  &__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+    fill: currentColor;
+    margin-right: 2rem;
+  }
+}
+
+////////////////////////////////////////////
+///// LEGAL
+.legal {
+  text-align: center;
+  padding: 2rem;
+  font-size: 1.2rem;
+  color: var(-grey-light-2);
+}
+
+////////////////////////////////////////////
+///// GALLERY
+.gallery {
+  display: flex;
+  &__item {
+  }
+  &__photo {
+    display: block;
+    width: 100%;
+  }
+}
+
+////////////////////////////////////////////
+///// HOTEL OVERVIEW
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--grey-light-2);
+
+  &__heading {
+    padding: 2rem 3rem;
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+  &__stars {
+    margin-right: auto;
+    display: flex;
+  }
+  &__icon-star,
+  &__icon-location {
+    height: 1.75rem;
+    width: 1.75rem;
+    fill: var(--primary);
+  }
+  &__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+  }
+  &__icon-location {
+    margin-right: 0.5rem;
+  }
+  &__rating {
+    background-color: var(--primary);
+    color: #fff;
+    margin-left: 3rem;
+    padding: 0 2.25rem;
+    align-self: stretch;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  &__rating-average {
+    font-size: 2.25rem;
+    font-weight: 400;
+    margin-bottom: -3px;
+  }
+  &__rating-count {
+  }
+}
+
+////////////////////////////////////////////
+///// BUTTON INLINE
+.btn-inline {
+  font-size: inherit;
+  border: none;
+  background-color: transparent;
+  color: var(--primary);
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  cursor: pointer;
+
+  &:hover {
+    color: var(--grey-dark-1);
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
+  }
+}
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+  50% {
+    transform: scale(1.3);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    transform: scale(1);
+    box-shadow: none;
+  }
+}
