--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,7 +9,7 @@
 .header {
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--grey-light-2);
+  border-bottom: 1px solid var(--grey-light-2);
   font-size: 1.4rem;
 
   display: flex;
@@ -23,8 +23,13 @@
   background-color: var(--grey-dark-1);
   color: var(--grey-light-1);
   flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .hotel-view {
-  background-color: orangered;
   flex: 1;
+  background-color: #fff;
+  //test
+  min-height: 80vh;
 }
