--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -179,7 +179,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--grey-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     padding: 2rem 3rem;
@@ -261,5 +261,69 @@
   100% {
     transform: scale(1);
     box-shadow: none;
+  }
+}
+
+////////////////////////////////////////////
+///// PARAGRAPH
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+////////////////////////////////////////////
+///// LIST
+.list {
+  list-style: none;
+  margin: 2rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  padding: 3rem 0;
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.7rem;
+  }
+  &__item::before {
+    content: '';
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+    //Old browsers
+    // background-image: url(../img/chevron-thin-right.svg);
+    // background-size: cover;
+
+    //image mask
+    background-color: var(--primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover;
+  }
+}
+
+////////////////////////////////////////////
+///// RECOMMEND
+.recommend {
+  font-size: 1.3rem;
+  color: var(--grey-dark-2);
+  display: flex;
+  align-items: center;
+
+  &__count {
+    margin-right: auto;
+  }
+  &__photo {
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    box-sizing: content-box;
+
+    &:not(:last-child) {
+      margin-right: -2rem;
+    }
   }
 }
