--- a/css/style.css
+++ b/css/style.css
@@ -201,15 +201,22 @@ body {
 
 .btn-inline {
   font-size: inherit;
+  font-family: inherit;
   border: none;
   background-color: transparent;
   color: var(--primary);
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
   display: inline-block;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: all 0.2s; }
+  .btn-inline span {
+    margin-left: 3px;
+    transition: margin-left 0.2s; }
   .btn-inline:hover {
     color: var(--grey-dark-1); }
+    .btn-inline:hover span {
+      margin-left: 8px; }
   .btn-inline:focus {
     outline: none;
     animation: pulsate 1s infinite; }
@@ -219,7 +226,7 @@ body {
     transform: scale(1);
     box-shadow: none; }
   50% {
-    transform: scale(1.3);
+    transform: scale(1.1);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
   100% {
     transform: scale(1);
@@ -267,6 +274,90 @@ body {
     .recommend__photo:not(:last-child) {
       margin-right: -2rem; }
 
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  margin-bottom: 3rem;
+  padding: 3rem;
+  position: relative;
+  overflow: hidden; }
+  .review__text {
+    margin-bottom: 2rem;
+    position: relative;
+    z-index: 10; }
+  .review__user {
+    display: flex;
+    align-items: center; }
+  .review__user-photo {
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1rem; }
+  .review__user-box {
+    margin-right: auto; }
+  .review__user-name {
+    font-size: 1.1rem;
+    font-weight: 700;
+    text-transform: uppercase; }
+  .review__user-date {
+    font-size: 1rem;
+    color: var(--grey-dark-2); }
+  .review__user-rating {
+    color: var(--primary);
+    font-size: 2.25rem; }
+  .review::before {
+    content: '\201C';
+    font-family: sans-serif;
+    position: absolute;
+    top: -9rem;
+    left: -1rem;
+    font-size: 20rem;
+    color: var(--grey-light-2);
+    z-index: 1; }
+
+.cta {
+  text-align: center;
+  padding: 3rem 0; }
+  .cta__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+    font-size: 1.75rem; }
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 100px;
+  background-image: linear-gradient(to right, var(--primary-light), var(--primary-dark));
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer; }
+  .btn > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: 0.2s; }
+  .btn__visible {
+    padding: 2rem 7.5rem; }
+  .btn__invisible {
+    position: absolute;
+    padding: 2rem 0;
+    top: -100%;
+    left: 0; }
+  .btn:hover {
+    background-image: linear-gradient(to left, var(--primary-light), var(--primary-dark)); }
+  .btn:hover .btn__visible {
+    transform: translateY(100%); }
+  .btn:hover .btn__invisible {
+    top: 0; }
+  .btn:focus {
+    outline: none;
+    animation: pulsate 1s infinite; }
+
 .container {
   background-color: var(--grey-light-1);
   max-width: 120rem;
@@ -302,7 +393,8 @@ body {
 .detail {
   display: flex;
   padding: 4.5rem;
-  background-color: var(--grey-light-1); }
+  background-color: var(--grey-light-1);
+  font-size: 1.4rem; }
 
 .description {
   background-color: #fff;
@@ -310,9 +402,10 @@ body {
   border-bottom: var(--line);
   flex: 0 0 60%;
   margin-right: 4.5rem;
-  padding: 3rem;
-  font-size: 1.4rem; }
+  padding: 3rem; }
 
 .user-reviews {
-  background-color: yellowgreen;
-  flex: 1; }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
