--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -231,6 +231,7 @@
 ///// BUTTON INLINE
 .btn-inline {
   font-size: inherit;
+  font-family: inherit;
   border: none;
   background-color: transparent;
   color: var(--primary);
@@ -238,9 +239,18 @@
   padding-bottom: 2px;
   display: inline-block;
   cursor: pointer;
+  transition: all 0.2s;
+
+  & span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
 
   &:hover {
     color: var(--grey-dark-1);
+    & span {
+      margin-left: 8px;
+    }
   }
 
   &:focus {
@@ -255,7 +265,7 @@
     box-shadow: none;
   }
   50% {
-    transform: scale(1.3);
+    transform: scale(1.1);
     box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
   }
   100% {
@@ -325,5 +335,133 @@
     &:not(:last-child) {
       margin-right: -2rem;
     }
+  }
+}
+
+////////////////////////////////////////////
+/////  REVIEW
+.review {
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  margin-bottom: 3rem;
+  padding: 3rem;
+  position: relative;
+  overflow: hidden;
+
+  &__text {
+    margin-bottom: 2rem;
+    position: relative;
+    z-index: 10;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__user-photo {
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+
+  &__user-box {
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--grey-dark-2);
+  }
+
+  &__user-rating {
+    color: var(--primary);
+    font-size: 2.25rem;
+  }
+
+  &::before {
+    content: '\201C';
+    font-family: sans-serif;
+    position: absolute;
+    top: -9rem;
+    left: -1rem;
+    font-size: 20rem;
+    color: var(--grey-light-2);
+    z-index: 1;
+  }
+}
+
+////////////////////////////////////////////
+/////  CALL TO ACTION
+.cta {
+  text-align: center;
+  padding: 3rem 0;
+
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+    font-size: 1.75rem;
+  }
+}
+
+////////////////////////////////////////////
+/////  BUTTON
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 100px;
+  background-image: linear-gradient(
+    to right,
+    var(--primary-light),
+    var(--primary-dark)
+  );
+  color: #fff;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+
+  & > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: 0.2s;
+  }
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+  &__invisible {
+    position: absolute;
+    padding: 2rem 0;
+    top: -100%;
+    left: 0;
+  }
+
+  &:hover {
+    background-image: linear-gradient(
+      to left,
+      var(--primary-light),
+      var(--primary-dark)
+    );
+  }
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
+  &:hover &__invisible {
+    top: 0;
+  }
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
   }
 }
