--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -38,6 +38,7 @@
   display: flex;
   padding: 4.5rem;
   background-color: var(--grey-light-1);
+  font-size: 1.4rem;
 }
 .description {
   background-color: #fff;
@@ -46,10 +47,12 @@
   flex: 0 0 60%;
   margin-right: 4.5rem;
   padding: 3rem;
-  font-size: 1.4rem;
 }
 
 .user-reviews {
-  background-color: yellowgreen;
   flex: 1;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
