Compeleted styling for Tablet, mobile using flex box properties

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -11,6 +11,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  @media only screen and (max-width: $bp-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--grey-light-2);
+  }
 
   &__input {
     font-family: inherit;
@@ -104,12 +109,22 @@
   list-style: none;
   margin-top: 3.25rem;
   font-size: 1.4rem;
+  @media only screen and (max-width: $bp-medium) {
+    margin: 0;
+    display: flex;
+  }
 
   &__item {
     position: relative;
+    @media only screen and (max-width: $bp-medium) {
+      flex: 1;
+    }
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+      @media only screen and (max-width: $bp-medium) {
+        margin: 0;
+      }
     }
   }
 
@@ -144,12 +159,25 @@
     z-index: 10;
     display: flex;
     align-items: center;
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+    }
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem 0.5rem;
+    }
   }
   &__icon {
     height: 1.75rem;
     width: 1.75rem;
     fill: currentColor;
     margin-right: 2rem;
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      height: 1.5rem;
+      width: 1.5rem;
+      margin-bottom: 0.7rem;
+    }
   }
 }
 
@@ -160,6 +188,9 @@
   padding: 2rem;
   font-size: 1.2rem;
   color: var(-grey-light-2);
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 ////////////////////////////////////////////
@@ -187,6 +218,10 @@
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
   &__stars {
     margin-right: auto;
@@ -217,13 +252,24 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
   }
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 400;
     margin-bottom: -3px;
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
   }
   &__rating-count {
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    @media only screen and (max-width: $bp-small) {
+      font-size: 0.5rem;
+    }
   }
 }
 
@@ -325,6 +371,9 @@
   &__count {
     margin-right: auto;
   }
+  &__friends {
+    display: flex;
+  }
   &__photo {
     height: 4rem;
     width: 4rem;
@@ -347,6 +396,10 @@
   padding: 3rem;
   position: relative;
   overflow: hidden;
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 2.5rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -403,6 +456,10 @@
 .cta {
   text-align: center;
   padding: 3rem 0;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
