--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,6 +18,13 @@
 
   --line: 1px solid var(--grey-light-2);
 }
+
+$bp-largest: 75em; //1200px (1200/16=75em)
+$bp-large: 68.75em; //1100px (1100/16=68.75em)
+$bp-medium: 56.25em; //900px (900/16=56.25em)
+$bp-small: 37.5em; //600px (600/16=37.5em)
+$bp-smallest: 31.25em; //500px (500/16=31.25em)
+
 * {
   padding: 0;
   margin: 0;
@@ -30,6 +37,9 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  @media only screen and (max-width: $bp-large) {
+    font-size: 50%;
+  }
 }
 body {
   font-family: 'Open Sans';
