--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -5,6 +5,12 @@
   box-shadow: var(--shadow-dark);
 
   min-height: 50vh;
+
+  @media only screen and (max-width: $bp-largest) {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 .header {
   height: 7rem;
@@ -15,9 +21,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media only screen and (max-width: $bp-smallest) {
+    flex-wrap: wrap;
+    height: 11rem;
+    align-content: space-around;
+  }
 }
 .content {
   display: flex;
+  @media only screen and (max-width: $bp-medium) {
+    flex-direction: column;
+  }
 }
 .sidebar {
   background-color: var(--grey-dark-1);
@@ -39,6 +53,12 @@
   padding: 4.5rem;
   background-color: var(--grey-light-1);
   font-size: 1.4rem;
+  @media only screen and (max-width: $bp-medium) {
+    padding: 3rem;
+  }
+  @media only screen and (max-width: $bp-small) {
+    flex-direction: column;
+  }
 }
 .description {
   background-color: #fff;
@@ -47,6 +67,14 @@
   flex: 0 0 60%;
   margin-right: 4.5rem;
   padding: 3rem;
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-right: 3rem;
+  }
+  @media only screen and (max-width: $bp-small) {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
 }
 
 .user-reviews {
