--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -348,15 +348,18 @@
     width: 1rem;
     margin-right: 0.7rem;
     //Old browsers
-    // background-image: url(../img/chevron-thin-right.svg);
-    // background-size: cover;
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
 
-    //image mask
-    background-color: var(--primary);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
-    mask-image: url(../img/chevron-thin-right.svg);
-    mask-size: cover;
+    //image mask - New browser
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      background-color: var(--primary);
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+      mask-image: url(../img/chevron-thin-right.svg);
+      mask-size: cover;
+      background-image: none;
+    }
   }
 }
 
